Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_index_where_altergo.txt
[kernel] Parsing index_where_rte.c (with preprocessing)
[kernel] index_where_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing index_where.c (with preprocessing)
  3     [kernel:typing:implicit-function-declaration] index_where.c:6: Warning:
[kernel] Frama-C aborted: invalid user input.
